--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,24 @@
   --font-body: 'Switzer', sans-serif;
   color-scheme: light dark;
 }
-
+@font-face {
+  font-family: 'Switzer';
+  src: url('/fonts/Switzer-Regular.woff2') format('woff2'),
+       url('/fonts/Switzer-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Switzer';
+  src: url('/fonts/Switzer-Extrabold.ttf') format('woff2'),
+       url('/fonts/Switzer-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 body {
-  font-family: var(--font-body);
+font-family: 'Switzer', 'Helvetica Neue', Arial, sans-serif;
   /* background-color: #f9fafb;
   color: #111827; */
   margin: 0;
