--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@
 body {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+;
   font-style: normal;
   /* background-color: #f9fafb;
   color: #111827; */
@@ -53,16 +53,29 @@ body {
   animation: zoomSlow 20s ease-in-out infinite alternate;
 }
 
-.slick-prev:before,
-.slick-next:before {
-  opacity: .75;
-  color: #251f77;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: slick;
-  font-size: 30px;
-  line-height: 1;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 @keyframes float {
 
