--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,20 +113,9 @@ body {
   }
 }
 
-.animate-float {
-  animation: float 6s ease-in-out infinite;
+.swiper-pagination-bullet-active{
+  height: 10px !important;
+    background: black !important;
+    width: 10px !important;
 }
 
-.animate-float-slow {
-  animation: float-slow 8s ease-in-out infinite;
-}
-
-.animate-float-delayed {
-  animation: float-delayed 7s ease-in-out infinite 1s;
-}
-
-.bg-grid-white {
-  background-image:
-    linear-gradient(to right, rgba(255, 255, 255, 0.1) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
-}
