--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,4 +118,10 @@ body {
     background: black !important;
  
 }
-
+.swiper-pagination-bullet{
+  width: 8px !important;
+  height: 8px !important;
+}
+:is(.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-horizontal.swiper-pagination-bullets) .swiper-pagination-bullet{
+  margin: 0 !important;
+}
