dots include in slider

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@ body {
   }
 }
 
-.swiper-pagination-bullet-active{
+/* .swiper-pagination-bullet-active{
  
     background: black !important;
  
@@ -121,9 +121,32 @@ body {
 .swiper-pagination-bullet{
   width: 8px !important;
   height: 8px !important;
+  margin-right: 10px;
+} */
+
+/* Custom pagination dots */
+.swiper-pagination-bullet {
+  background: white !important;
+  /* opacity: 0.5; */
+  width: 10px;
+  height: 10px;
+ 
 }
+
+.swiper-pagination-bullet-active {
+  background: black !important;
+  opacity: 1;
+  width: 12px;
+  height: 12px;
+}
+
+/* Position the pagination */
+.swiper-pagination {
+  bottom: 30px !important;
+}
+
 :is(.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-horizontal.swiper-pagination-bullets) .swiper-pagination-bullet{
-  margin: 0 !important;
+  margin: 6px !important;
 }
 /* Custom styles for better form appearance */
 select {
