--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,8 +63,8 @@ body {
 
 .swiper-slide {
   text-align: center;
-  font-size: 18px;
-  background: #444;
+  /* font-size: 18px; */
+  /* background: #444; */
 
   /* Center slide text vertically */
   display: flex;
