video tags added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,3 +180,13 @@ input[type='number'] {
 .clip-path-triangle {
   clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
 }
+
+/* Add this to your global CSS */
+video {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  perspective: 1000;
+}
