--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,8 +180,6 @@ input[type='number'] {
 .clip-path-triangle {
   clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
 }
-
-/* Add this to your global CSS */
 video {
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
@@ -189,4 +187,16 @@ video {
   backface-visibility: hidden;
   -webkit-perspective: 1000;
   perspective: 1000;
+}
+html {
+  scroll-behavior: smooth;
+}
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
